--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 body{
     color:white;
+    display:block;
+    margin-left: auto;
+    margin-right: auto;
     background-image: url(images/waterback.jpeg);
-    max-width: auto;
+    background-size: auto;
+    overflow: hidden;
 }
 .gifs{
     height: 200px;
@@ -50,6 +54,9 @@ body{
     color:black;
 }
 .logo{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     height:230px;
     width:700px;
     margin-bottom: 10px;
@@ -78,4 +85,108 @@ body{
     vertical-align: middle;
     margin-top:25px;;
    
+}
+@media only screen and (max-width: 1201px){
+    .form-group{
+        position: absolute;
+        top: 90%;
+        left: 50%;
+        height: 30%;
+        width: 50%;
+        margin: -15% 0 0 -25%;
+    }
+}
+@media only screen and (max-width: 1201px){
+    .buttonList{
+        position: absolute;
+    top: 8%;
+    left: 50%;
+    height: 30%;
+    width: 50%;
+    margin: -15% 0 0 -25%;
+    vertical-align: middle;
+    margin-top:25px;;
+    }
+    .form-group{
+        position: absolute;
+        top: 90%;
+        left: 50%;
+        height: 30%;
+        width: 50%;
+        margin: -15% 0 0 -25%;
+    }
+}
+@media only screen and (max-width: 768px){
+.buttonList{
+    position: absolute;
+top: 5%;
+left: 50%;
+height: 30%;
+width: 300px;
+margin: -15% 0 0 -25%;
+vertical-align: middle;
+margin-top:25px;;
+}
+.form-group{
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    height: 30%;
+    width: 50%;
+    margin: -15% 0 0 -25%;
+}
+body{
+    overflow: hidden;
+    width: 768px;
+    background-size: 800px 760px;
+}
+.logo{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height:230px;
+    width:auto;
+    margin-bottom: 10px;
+}
+}
+@media only screen and (max-width: 575px){
+.buttonList{
+    position: absolute;
+top: 5%;
+left: 50%;
+height: 30%;
+width: 50%;
+margin: -15% 0 0 -25%;
+vertical-align: middle;
+margin-top:25px;;
+}
+.form-group{
+    position: absolute;
+    top: 85%;
+    left: 50%;
+    height: 30%;
+    width: 50%;
+    margin: -15% 0 0 -25%;
+}
+.logo{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height:230px;
+    width:auto;
+    margin-bottom: 10px;
+}
+.box{
+    width: 476px;
+    margin-left: 0px;
+}
+.buttonList{
+    margin: 3% 0 0 -43%;
+}
+.form-group{
+    margin: -15% 0 0 -42%;
+}
+.logo{
+    margin-left: 0px;
+}
 }
