--- a/style.css
+++ b/style.css
@@ -145,7 +145,35 @@ body{
         margin: -15% 0 0 -25%;
     }
 }
+@media only screen and (max-width: 993px){
+    .favoritesbar{
+        width:288px!important;
+    }
+}
+@media only screen and (max-width: 862px){
+    .gifs{
+        height: 150px!important;
+        width: 150px!important;
+    }
+}
 @media only screen and (max-width: 768px){
+    .col-md-8 {
+        -ms-flex: 0 0 66.666667%;
+        flex: 0 0 66.666667%;
+        max-width: 51.666667%;
+    }
+    .form-group{
+        top:73%!important;
+    }
+    .favoritesbar {
+        width: 200px!important;
+    }
+    .faves {
+        width: 200px;
+    }
+    #favebox{
+        width: 48%!important;
+    }
 .buttonList{
     position: absolute;
 top: 5%;
@@ -155,6 +183,9 @@ width: 300px;
 margin: -15% 0 0 -25%;
 vertical-align: middle;
 margin-top:25px;;
+}
+.favoritegifs{
+    background-size: 800px 760px;
 }
 .form-group{
     position: absolute;
@@ -177,6 +208,11 @@ body{
     width:auto;
     margin-bottom: 10px;
 }
+.gifs{
+    height:150px;
+    width: 150px;
+}
+
 }
 @media only screen and (max-width: 575px){
 .buttonList{
@@ -191,7 +227,7 @@ margin-top:25px;;
 }
 .form-group{
     position: absolute;
-    top: 85%;
+    top: 80%!important;
     left: 50%;
     height: 30%;
     width: 50%;
@@ -258,4 +294,38 @@ margin-top:25px;;
     margin-right: auto;
 
 }
-
+@media only screen and (max-width: 510px){
+    .box{
+        padding-left: 5px;
+        width:418px;
+    }
+    #searchTerm{
+        width: 320px;
+    }
+    .buttonList{
+        width: 44%;
+    }
+    .col-md-8 {
+        -ms-flex: 0 0 66.666667%;
+        flex: 0 0 66.666667%;
+        max-width: 23.666667%;
+    }
+    #search{
+        margin-left: -50px;
+    }
+    label{
+        margin-left:-50px;
+    }
+    .logo{
+        margin-left: -60px;
+    }
+    .container{
+        padding-left:3px;
+    }
+    .fa-star{
+        left:37px;
+    }
+    .favoritesbar{
+        height:auto;
+    }
+}
